--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -13,9 +13,35 @@
         @apply w-1 h-1 cursor-pointer;
     }
     *::-webkit-scrollbar-track {
-        @apply bg-scrollbar-backgorund rounded-full border-4;
+        @apply bg-scrollbar-backgorund-light dark:bg-scrollbar-backgorund-dark rounded-full border-4;
     }
     *::-webkit-scrollbar-thumb {
-        @apply bg-scrollbar-thumb rounded-full border-2;
+        @apply bg-scrollbar-thumb-light dark:bg-scrollbar-thumb-dark rounded-full border-2;
+    }
+}
+
+@layer components {
+    .text-color {
+        @apply text-black dark:text-white;
+    }
+
+    .bg-background {
+        @apply bg-backgorund-light dark:bg-backgorund-dark;
+    }
+
+    .bg-container {
+        @apply bg-container-light dark:bg-container-dark;
+    }
+
+    .border-container {
+        @apply border-container-border-light dark:border-container-border-dark;
+    }
+
+    .bg-interactable {
+        @apply bg-interactable-light dark:bg-interactable-dark;
+    }
+
+    .border-interactable {
+        @apply border-interactable-border-light dark:border-interactable-border-dark;
     }
 }
