--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -19,10 +19,8 @@
         @apply bg-scrollbar-thumb rounded-full border-2;
     }
 
-
-
     .container {
-        @apply p-2 border-1 rounded-md bg-container border-container-border box-border shadow overflow-hidden flex flex-col
+        @apply p-2 border-1 rounded-md bg-container border-container-border box-border shadow overflow-hidden flex flex-col;
     }
 
     .interactable {
