Fixed fonts & code input

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -4,7 +4,7 @@
 
 @layer base {
     #app {
-        font-family: Avenir, Helvetica, Arial, sans-serif;
+        font-family: Arial, sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
     }
